--- a/app-front/src/app/navbar/navbar.component.html
+++ b/app-front/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<ul nz-menu nzMode="horizontal">
-    <li nz-menu-item>Login</li>
-    <li nz-menu-item>Sobre Listas Práticas</li>
-</ul>
+<nz-page-header>
+    <ul nz-menu nzMode="horizontal">
+        <li nz-menu-item>Login</li>
+        <li nz-menu-item>Sobre Listas Práticas</li>
+    </ul>
+</nz-page-header>
