--- a/app-front/src/app/note-list/note-list.component.html
+++ b/app-front/src/app/note-list/note-list.component.html
@@ -1,1 +1,12 @@
-<p>note-list works!</p>
+<div>
+    <form nz-form>
+        <nz-form-item>
+            <nz-form-control [nzSpan]="14">
+                <nz-input-group nzPrefixIcon="search">
+                    <input nz-input type="search" name="query">
+                </nz-input-group>
+            </nz-form-control>
+        </nz-form-item>
+    </form>
+    <!-- button -->
+</div>
