--- a/app-front/src/app/login/form-signin/form-signin.component.html
+++ b/app-front/src/app/login/form-signin/form-signin.component.html
@@ -1,4 +1,4 @@
-<form nz-form [formGroup]="signinForm" (ngSubmit)="submitLogin()">
+<form nz-form [formGroup]="signinForm" (ngSubmit)="submitSignIn()">
         <nz-form-item>
             <nz-form-control nzErrorTip="Insira seu email">
                 <nz-input-group nzPrefixIcon="user">
@@ -29,7 +29,7 @@
         </nz-form-item>
         <nz-form-item>
             <nz-form-control>
-                <button nz-button [nzType]="'primary'">Login</button>
+                <button nz-button [nzType]="'primary'">Sign In</button>
             </nz-form-control>
         </nz-form-item>
     </form>
