Adicionando o custom validator para checar email no banco de dados

--- a/app-front/src/app/login/form-signin/form-signin.component.html
+++ b/app-front/src/app/login/form-signin/form-signin.component.html
@@ -32,4 +32,5 @@
                 <button nz-button [nzType]="'primary'">Sign In</button>
             </nz-form-control>
         </nz-form-item>
+        <h1>{{signinForm.status }}</h1>
     </form>
