--- a/app-front/src/app/navbar/navbar.component.html
+++ b/app-front/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nz-page-header>
-    <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item>Login</li>
-        <li nz-menu-item>Sobre Listas Práticas</li>
-    </ul>
+        <nz-page-header-title>Notes App</nz-page-header-title>  
+        <nz-page-header-extra *ngIf="navMenu">
+          <button nz-button>Profile</button>
+          <button nz-button nzType="primary" (click)="logoutUser()">Logout</button>
+        </nz-page-header-extra>
 </nz-page-header>
