Carregando notas no componente principal

--- a/app-front/src/app/note/note.component.html
+++ b/app-front/src/app/note/note.component.html
@@ -1,2 +1,2 @@
-<app-note-list></app-note-list>
-<app-note-board></app-note-board>
+<app-note-list [user]="userLogged" [listaNotas]="listaNotas"></app-note-list>
+<app-note-board [user]="userLogged"></app-note-board>
