Ajustes de layout consoles

--- a/app-front/src/app/note/note.component.html
+++ b/app-front/src/app/note/note.component.html
@@ -1,2 +1,5 @@
-<app-note-list [user]="userLogged" [listaNotas]="listaNotas"></app-note-list>
-<app-note-board [user]="userLogged"></app-note-board>
+<div class="inner-content">
+    <app-note-list [user]="userLogged" [listaNotas]="listaNotas"></app-note-list>
+    <app-note-board [user]="userLogged"></app-note-board>
+</div>
+
