--- a/app-front/src/app/note/note-list/note-list.component.html
+++ b/app-front/src/app/note/note-list/note-list.component.html
@@ -1,12 +1,27 @@
 <div>
     <form nz-form>
         <nz-form-item>
-            <nz-form-control [nzSpan]="14">
+            <nz-form-control>
                 <nz-input-group nzPrefixIcon="search">
                     <input nz-input type="search" name="query">
                 </nz-input-group>
             </nz-form-control>
         </nz-form-item>
+        <nz-form-item>
+            <nz-form-control>
+                    <button nz-button nzType="default" nzShape="circle" (click)="addNewNoteField()" ><i nz-icon nzType="plus"></i></button>
+            </nz-form-control>
+        </nz-form-item>
     </form>
     <!-- button -->
+    
+    <nz-list [nzItemLayout]="'horizontal'" [nzLoading]="loading">
+        <nz-list-item *ngFor="let note of listaNotas"> 
+            <nz-list-item-meta
+                [nzTitle]="note.texto | truncate:[85, '...']"
+                nzDescription="{{note.texto}}"
+            >
+            </nz-list-item-meta>
+        </nz-list-item>
+    </nz-list>
 </div>
