Data flow da lista para o componente pai

--- a/app-front/src/app/note/note-list/note-list.component.html
+++ b/app-front/src/app/note/note-list/note-list.component.html
@@ -16,12 +16,14 @@
     <!-- button -->
     
     <nz-list [nzItemLayout]="'horizontal'" [nzLoading]="loading">
-        <nz-list-item *ngFor="let note of listaNotas"> 
-            <nz-list-item-meta
-                [nzTitle]="note.texto | truncate:[85, '...']"
-                nzDescription="{{note.texto}}"
-            >
-            </nz-list-item-meta>
+        <nz-list-item *ngFor="let note of listaNotas; let i = index"> 
+            <a (click)="selectNote(i)">
+                <nz-list-item-meta
+                    [nzTitle]="note.texto | truncate:[85, '...']"
+                    nzDescription="{{note.texto}}"
+                >
+                </nz-list-item-meta>
+            </a>            
         </nz-list-item>
     </nz-list>
 </div>
