--- a/app-front/src/app/navbar/navbar.component.html
+++ b/app-front/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nz-page-header>
         <nz-page-header-title>Notes App</nz-page-header-title>  
         <nz-page-header-extra *ngIf="navMenu">
-          <button nz-button>Profile</button>
+          <button nz-button disabled>Profile</button>
           <button nz-button nzType="primary" (click)="logoutUser()">Logout</button>
         </nz-page-header-extra>
 </nz-page-header>
