--- a/app-front/src/app/login/login.component.html
+++ b/app-front/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<div nz-row>
-    <section nz-col class="login-component" [nzXs]="{ span: 11, offset: 1}" [nzLg]="{ span: 6, offset: 6}" nzSpan="8" nz-Offset="6">
+<div nz-row nzType="flex" nzJustify="center">
+    <section nz-col class="login-component">
         <nz-tabset>
             <nz-tab nzTitle="Login">
                 <!-- <i nz-icon nzType="user"></i> -->
