--- a/app-front/src/app/profile/profile.component.html
+++ b/app-front/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="inner-content" nz-row nzType="flex" nzJustify="center">
-    <form nz-form [formGroup]="profileForm" (ngSubmit)="submitLogin()">
+    <form nz-form [formGroup]="profileForm" (ngSubmit)="submitUpdate()">
         <nz-form-item>
                 <nz-form-control>
                     <nz-input-group nzPrefixIcon="user">
@@ -15,26 +15,49 @@
                 </nz-form-control>
             </nz-form-item>
     
-            <div formGroupName="userPassword">
-                <nz-form-item>
-                    <nz-form-control>
-                        <nz-input-group nzPrefixIcon="lock">
-                            <input type="password" nz-input formControlName="password" placeholder="Senha">
-                        </nz-input-group>
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item>
-                    <nz-form-control>
-                        <nz-input-group nzPrefixIcon="lock">
-                            <input type="password" nz-input formControlName="repeat" placeholder="Confirmar a Senha">
-                        </nz-input-group>
-                    </nz-form-control>
-                </nz-form-item>
-            </div>
+            
             <nz-form-item>
                 <nz-form-control>
-                    <button nz-button [nzType]="'primary'">Atualizar</button>
+                    <button nz-button [disabled]="updateSuccess" [nzType]="'primary'">Atualizar</button>
+                    <button 
+                    nz-button 
+                    nzType="danger" 
+                    nz-popover
+                    nzPopoverTitle="Deseja exluir o usuário? Essa ação não pode ser desfeita"
+                    [(nzVisible)]="popOverDeleteVisibility"
+                    [nzPopoverContent]="deleteButtonTemplate"
+                    nzPopoverTrigger="click"
+                    
+                    >
+                        Excluir
+                    </button>
+                    <ng-template #deleteButtonTemplate>
+                        <a (click)="deleteUser()">Deletar</a>
+                    </ng-template>
                 </nz-form-control>
-            </nz-form-item>
+                <a nz-button
+                    [style.visibility]="updateSuccess ? 'visible' : 'hidden'" 
+                    [nzType]="'default'"
+                    (click)="newUpdate()"
+                    >Nova Atualização</a>
+            </nz-form-item> 
+    </form>
+</div>
+<div class="inner-content" nz-row nzType="flex" nzJustify="center">
+    <form nz-form [formGroup]="userPassword" (ngSubmit)="submitNewPassword()">
+        <nz-form-item>
+            <nz-form-control>
+                <nz-input-group nzPrefixIcon="lock">
+                    <input type="password" nz-input formControlName="password" placeholder="Senha">
+                </nz-input-group>
+            </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+            <nz-form-control>
+                <nz-input-group nzPrefixIcon="lock">
+                    <input type="password" nz-input formControlName="repeat" placeholder="Confirmar a Senha">
+                </nz-input-group>
+            </nz-form-control>
+        </nz-form-item>
     </form>
 </div>
