--- a/app-front/src/app/profile/profile.component.html
+++ b/app-front/src/app/profile/profile.component.html
@@ -26,9 +26,7 @@
                     nzPopoverTitle="Deseja exluir o usuário? Essa ação não pode ser desfeita"
                     [(nzVisible)]="popOverDeleteVisibility"
                     [nzPopoverContent]="deleteButtonTemplate"
-                    nzPopoverTrigger="click"
-                    
-                    >
+                    nzPopoverTrigger="click">
                         Excluir
                     </button>
                     <ng-template #deleteButtonTemplate>
