--- a/app-front/src/app/note/note-list/note-list.component.html
+++ b/app-front/src/app/note/note-list/note-list.component.html
@@ -1,18 +1,27 @@
 <div>
-    <form nz-form [formGroup]="searchForm">
-        <nz-form-item>
-            <nz-form-control>
-                <nz-input-group nzPrefixIcon="search">
-                    <input nz-input type="search" formControlName="query">
-                </nz-input-group>
-            </nz-form-control>
-        </nz-form-item>
-        <nz-form-item>
-            <nz-form-control>
-                <button nz-button nzType="default" nzShape="circle" (click)="addNewNoteField()"><i nz-icon nzType="plus"></i></button>
-            </nz-form-control>
-        </nz-form-item>
-    </form>
+    <div nzSpan="12">
+        <form nz-form [formGroup]="searchForm">
+            <div nz-row>
+                <div nz-col nzSpan="22">
+                    <nz-form-item>
+                        <nz-form-control>
+                            <nz-input-group nzPrefixIcon="search">
+                                <input nz-input type="search" formControlName="query">
+                            </nz-input-group>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+                <div nz-col nzSpan="2">
+                    <nz-form-item>
+                        <nz-form-control>
+                            <button nz-button nzType="default" nzShape="circle" (click)="addNewNoteField()"><i nz-icon nzType="plus"></i></button>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </div>
+        </form>
+    </div>
+    
     <!-- button -->
     
     <nz-list [nzItemLayout]="'horizontal'" [nzLoading]="loading">
